--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -70,7 +70,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnStartMagenta"
+        android:id="@+id/btnStartAccount"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/txtConfirmPassword"
