--- a/app/src/main/res/layout/fragment_genre.xml
+++ b/app/src/main/res/layout/fragment_genre.xml
@@ -1,16 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GenreFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_genre_scrollbar"
+    android:background="@color/black">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:textSize="40sp"
-        android:text="Genre" />
+        android:layout_width="match_parent"
+        android:background="@color/black"
+        android:padding="10dp"
+        android:id="@+id/fragment_genre">
 
-</FrameLayout>
+
+            <TextView
+                android:id="@+id/Top_genre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/black"
+                android:text="Your Top Genres"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_below="@+id/Top_genre"
+                android:layout_marginTop="5dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/favourite_genre_recycler_view" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:id="@+id/browse_all"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:text="Browse All"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_below="@+id/favourite_genre_recycler_view"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_below="@+id/browse_all"
+            android:layout_marginTop="5dp"
+            android:layout_height="match_parent"
+            android:id="@+id/regular_genre_recycler_view" />
+
+
+
+
+    </RelativeLayout>
+
+</ScrollView>
