--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -41,12 +41,11 @@
 
     <TextView
         android:id="@+id/song_duration"
-        android:layout_toRightOf="@+id/song_name"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="00.00"
         android:textColor="@color/white"
-        android:textSize="10dp"
-        android:layout_marginLeft="220dp"
-        android:layout_marginTop="15dp"/>
+        android:textSize="10dp"/>
 </RelativeLayout>
