--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,6 +40,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/txtEmailEdit"
             android:hint="Enter email" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -53,6 +54,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/txtCreatePasswordEdit"
             android:hint="Enter your password" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -67,6 +69,19 @@
         android:background="@drawable/gradient_pink"
         android:backgroundTintMode="add"
         android:text="Start Magenta"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnRegisterNow"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnStartMagenta"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/gradient_pink"
+        android:backgroundTintMode="add"
+        android:text="Register"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"/>
