--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -34,25 +34,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imgMainIcon"
-        android:id="@+id/txtEmail"
+        android:id="@+id/txtEmailEdit"
         android:layout_marginTop="25dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/txtEmailEditRej"
             android:hint="Enter email" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtEmail"
+        android:layout_below="@+id/txtEmailEdit"
         android:id="@+id/txtCreatePassword"
         android:layout_marginTop="25dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/txtCreatePasswordEditRej"
             android:hint="Create a password" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -66,6 +68,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/txtCreatePasswordEdit"
             android:hint="Confirm your password" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -78,6 +81,19 @@
         android:background="@drawable/gradient_pink"
         android:backgroundTintMode="add"
         android:text="Start Account"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/loginNow"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnStartAccount"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/gradient_pink"
+        android:backgroundTintMode="add"
+        android:text="Login Now"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"/>
