--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:background="@color/black"
-    tools:context=".PlayerActivity">
+    tools:context=".Activities.PlayerActivity">
 
     <ImageView
         android:layout_width="30dp"
