--- a/app/src/main/res/layout/activity_app_holder.xml
+++ b/app/src/main/res/layout/activity_app_holder.xml
@@ -34,9 +34,9 @@
             android:layout_centerInParent="true"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/profile_pic"
+            android:id="@+id/main_profile_img"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentRight="true"/>
 
     </RelativeLayout>
