--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -23,6 +23,7 @@
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         android:id="@+id/splash_animation"
+        android:elevation="5dp"
         app:lottie_rawRes="@raw/splash_animation"
         />
 
