--- a/app/src/main/res/layout/activity_app_holder.xml
+++ b/app/src/main/res/layout/activity_app_holder.xml
@@ -40,74 +40,88 @@
             android:layout_alignParentRight="true"/>
 
     </RelativeLayout>
-
-    <RelativeLayout
+    
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/tab_layout"
-        android:padding="20dp"
-        android:background="@color/black"
-        android:id="@+id/current_player">
+        app:layout_constraintBottom_toTopOf="@id/tab_layout"
+        android:id="@+id/minimized_player">
 
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/sample_bg"
-            android:id="@+id/songImg"/>
-
-        <TextView
-            android:layout_width="wrap_content"
+        <fragment
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Song1"
-            android:textSize="12dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_toEndOf="@id/songImg"
-            android:textColor="@color/white"
-            android:id="@+id/song_name_bottom"/>
+            android:name="com.example.magentastreaming.Fragments.MinimizedPlayer"
+            tools:layout="@layout/fragment_minimized_player"/>
+    </FrameLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Artist1"
-            android:textSize="6dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="2dp"
-            android:layout_below="@+id/song_name_bottom"
-            android:layout_toEndOf="@+id/songImg"
-            android:textColor="@color/white"/>
+<!--    <RelativeLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/tab_layout"-->
+<!--        android:padding="20dp"-->
+<!--        android:background="@color/black"-->
+<!--        android:id="@+id/current_player">-->
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true">
+<!--        <ImageView-->
+<!--            android:layout_width="60dp"-->
+<!--            android:layout_height="60dp"-->
+<!--            android:layout_alignParentLeft="true"-->
+<!--            android:src="@drawable/sample_bg"-->
+<!--            android:id="@+id/songImg"/>-->
 
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="30dp"
-                android:src="@drawable/backward_step_solid"
-                android:id="@+id/bottom_prev"
-                android:layout_marginRight="15dp"/>
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Song1"-->
+<!--            android:textSize="12dp"-->
+<!--            android:layout_marginLeft="20dp"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:layout_toEndOf="@id/songImg"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:id="@+id/song_name_bottom"/>-->
 
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="30dp"
-                android:src="@drawable/play_solid"
-                android:id="@+id/bottom_play"
-                android:layout_toEndOf="@+id/bottom_prev"/>
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Artist1"-->
+<!--            android:textSize="6dp"-->
+<!--            android:layout_marginLeft="20dp"-->
+<!--            android:layout_marginTop="2dp"-->
+<!--            android:layout_below="@+id/song_name_bottom"-->
+<!--            android:layout_toEndOf="@+id/songImg"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:id="@+id/artist_bottom"/>-->
 
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="30dp"
-                android:src="@drawable/next_music"
-                android:id="@+id/bottom_next"
-                android:layout_marginLeft="15dp"
-                android:layout_toEndOf="@+id/bottom_play"/>
+<!--        <RelativeLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentRight="true"-->
+<!--            android:layout_centerVertical="true">-->
 
-        </RelativeLayout>
-    </RelativeLayout>
+<!--            <ImageView-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="30dp"-->
+<!--                android:src="@drawable/backward_step_solid"-->
+<!--                android:id="@+id/bottom_prev"-->
+<!--                android:layout_marginRight="15dp"/>-->
+
+<!--            <ImageView-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="30dp"-->
+<!--                android:src="@drawable/play_solid"-->
+<!--                android:id="@+id/bottom_play"-->
+<!--                android:layout_toEndOf="@+id/bottom_prev"/>-->
+
+<!--            <ImageView-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="30dp"-->
+<!--                android:src="@drawable/next_music"-->
+<!--                android:id="@+id/bottom_next"-->
+<!--                android:layout_marginLeft="15dp"-->
+<!--                android:layout_toEndOf="@+id/bottom_play"/>-->
+
+<!--        </RelativeLayout>-->
+<!--    </RelativeLayout>-->
 
 
     <com.google.android.material.tabs.TabLayout
@@ -154,7 +168,7 @@
         android:id="@+id/frame_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/current_player"
+        app:layout_constraintBottom_toTopOf="@+id/minimized_player"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/top_bar"
