--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -57,5 +57,16 @@
             android:textStyle="bold"
             android:textColor="@color/white" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_bg"
+            android:id="@+id/logout_button"
+            android:text="Logout"
+            android:layout_below="@+id/cancel_button"
+            android:layout_marginTop="15dp"
+            android:textStyle="bold"
+            android:textColor="@color/white" />
+
     </RelativeLayout>
 </RelativeLayout>
