--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -98,11 +98,12 @@
                 android:textColor="@color/white"/>
 
             <ImageView
-                android:layout_width="120dp"
+                android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:scaleType="center"
-                android:src="@drawable/sample_bg" />
+                android:background="@drawable/flash"
+                android:layout_marginTop="10dp"/>
         </RelativeLayout>
 
         <TextView
