--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -41,7 +41,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/txtEmailEditRej"
-            android:hint="Enter email" />
+            android:hint="Enter email"
+            android:textColor="@color/white"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -56,7 +57,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/txtCreatePasswordEditRej"
             android:hint="Create a password"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            android:textColor="@color/white"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -71,7 +73,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/txtCreatePasswordEdit"
             android:inputType="textPassword"
-            android:hint="Confirm your password" />
+            android:hint="Confirm your password"
+            android:textColor="@color/white"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
